fix nav-bar footer not showing correctly. also add reference to FreeDNS

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -255,3 +255,10 @@ footer {
   position: fixed;
   bottom: 0px;
 }
+
+.nav-footer {
+  background-color: $main-color;
+  color: $background-color;
+  text-align: center;
+  padding: 0.6667em 0;
+}
